// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contractActions getContractDetails 1`] = `
Array [
  Object {
    "payload": Object {
      "contractAddress": "0x000...",
      "contractCurrentPrice": undefined,
      "contractDuration": undefined,
      "contractGain": NaN,
      "contractMultiplier": 1,
      "contractStartPrice": 1,
      "oracleAddress": undefined,
    },
    "type": "SET_CONTRACT_DETAILS",
  },
]
`;

exports[`contractActions getContractDetails error 1`] = `
Array [
  Object {
    "payload": "error",
    "type": "SET_FETCHING_ERROR",
  },
]
`;

exports[`contractActions getContractDetails with no start price 1`] = `
Array [
  Object {
    "payload": Object {
      "contractAddress": "0x000...",
      "contractCurrentPrice": 0,
      "contractDuration": undefined,
      "contractGain": 0,
      "contractMultiplier": 1,
      "contractStartPrice": 0,
      "oracleAddress": undefined,
    },
    "type": "SET_CONTRACT_DETAILS",
  },
]
`;

exports[`contractActions getContractOpenDates 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "SET_CONTRACT_OPEN_DATES",
  },
]
`;

exports[`contractActions getContractOpenDates error 1`] = `
Array [
  Object {
    "payload": "Contract Open Dates: error",
    "type": "SET_FETCHING_ERROR",
  },
]
`;

exports[`contractActions getOrderBook 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getOrderBook error 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": "Order Book: error",
    "type": "SET_FETCHING_ERROR",
  },
]
`;

exports[`contractActions getOrderBook silent 1`] = `
Array [
  Object {
    "payload": Array [],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getRecentTrades 1`] = `
Array [
  Object {
    "payload": "SET_RECENT_TRADES",
    "type": "SET_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getRecentTrades error 1`] = `
Array [
  Object {
    "payload": "SET_RECENT_TRADES",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": "Recent Trades: Cannot read property 'get' of undefined",
    "type": "SET_FETCHING_ERROR",
  },
]
`;

exports[`contractActions getRecentTrades silent 1`] = `Array []`;
